@startuml

title __ENTITY's Class Diagram__\n

  package by.training.task3.entity {
    class Expression {
        + Expression()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Lexeme {
        + Lexeme()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Paragraph {
        + Paragraph()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Punctuation {
        + Punctuation()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Sentence {
        + Sentence()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Symbol {
        - character : Character
        + Symbol()
        + equals()
        + hashCode()
        + getComponent()
    }
  }
  

  package by.training.task3.entity {
    class Text {
        + Text()
        + toString()
    }
  }
  

  package by.training.task3.entity {
    class Word {
        + Word()
        + toString()
    }
  }
  

  Expression -up-|> Component
  Expression -up-|> TextComposite
  Lexeme -up-|> Component
  Lexeme -up-|> TextComposite
  Paragraph -up-|> Component
  Paragraph -up-|> TextComposite
  Punctuation -up-|> Component
  Punctuation -up-|> TextComposite
  Sentence -up-|> Component
  Sentence -up-|> TextComposite
  Symbol -up-|> Component
  Symbol -up-|> TextComposite
  Text -up-|> Component
  Text -up-|> TextComposite
  Word -up-|> Component
  Word -up-|> TextComposite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
